feat(events): update event service, DTOs, seeders and swagger documentation
